fix homepage style on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -45,4 +45,7 @@ main section {
     .App {
         min-height: -webkit-fill-available;
     }
+    .page {
+        width: 100vw;
+    }
 }
